# dummy-python-package

./: README.md  pyproject.toml  setup.py
example/: __main__.py  example.py
src/example/: example.py
src/example/data/: data.rst
